--- a/app.css
+++ b/app.css
@@ -25,9 +25,8 @@ p {
 }
 
 img {
-  width: 100%;
-  max-width: 100%;
-  height: auto;
+  height: 35px;
+  width: 65px;
 }
 
 section {
@@ -201,12 +200,13 @@ nav {
 .activities-grid {
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   display: grid;
-  grid-gap: 2.5rem;
+  grid-gap: 4rem;
 }
 
 .activities-grid-item {
   height: 40rem;
   padding: 5rem;
+  margin: 10px;
   color: #fafafa;
   position: relative;
   display: flex;
