--- a/app.css
+++ b/app.css
@@ -25,9 +25,9 @@ p {
   font-size: 1.6rem;
 }
 
-img {
-  height: 29px;
-  width: 55px;
+.img {
+  height: 29px !important;
+  width: 55px !important;
 }
 
 section {
@@ -450,10 +450,136 @@ footer {
   }
 }
 /* just to add space from the nav-bar to the element*/
-#target-services, #target-about, #target-booking, #target-map{
-padding: 1.2rem;
-/*google map*/
+#target-services,
+#target-about,
+#target-booking,
+#target-map {
+  padding: 1.2rem;
+}
 
+/*google map*/
 .googlemap {
   width: 100%;
+  position: relative;
+  top: auto;
+}
+
+.body {
+  margin: 0;
+  padding: 0;
+  height: 70vh;
+  display: flex;
+  background-color: #fafafa;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  top: 100px;
+}
+
+.slider {
+  width: 100%;
+  height: 500px;
+  border-radius: 0px;
+  overflow: hidden;
+}
+
+.slides {
+  width: 500%;
+  height: 500px;
+  display: flex;
+}
+
+.slides input {
+  display: none;
+}
+
+.slide {
+  width: 20%;
+  transition: 2s;
+}
+
+.slide img {
+  width: 100%;
+  height: 400px;
+}
+
+/*CSS for manual slide*/
+.navigation-manual {
+  position: absolute;
+  width: 800px;
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+  top: 60vh;
+  left: 45vh;
+}
+
+.manual-btn {
+  border: 2px solid #eb648c;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child) {
+  margin-right: 40px;
+}
+
+.manual-btn:hover {
+  background: #ce587b;
+}
+
+#radio1:checked ~ .first {
+  margin-left: 0;
+}
+
+#radio2:checked ~ .first {
+  margin-left: -20%;
+}
+
+#radio3:checked ~ .first {
+  margin-left: -40%;
+}
+
+#radio4:checked ~ .first {
+  margin-left: -60%;
+}
+
+/*css for auto nav*/
+.navigation-auto {
+  position: absolute;
+  width: 800px;
+  justify-content: center;
+  bottom: 13.9vh;
+  left: 45vh;
+  margin-top: 460px;
+  display: flex;
+}
+
+.navigation-auto div {
+  border: 2px solid #eb648c;
+  border-radius: 10px;
+  padding: 5px;
+  transition: 1s;
+}
+
+.navigation-auto div:not(:last-child) {
+  margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+  background: #ce587b;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+  background: #ce587b;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+  background: #ce587b;
+}
+
+#radio4:checked ~ .navigation-auto .auto-btn4 {
+  background: #ce587b;
 }
