--- a/app.css
+++ b/app.css
@@ -11,6 +11,7 @@ html {
   font-size: 9px;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 a {
@@ -461,125 +462,55 @@ footer {
 .googlemap {
   width: 100%;
   position: relative;
-  top: auto;
+  top: 0px;
 }
 
-.body {
-  margin: 0;
-  padding: 0;
-  height: 70vh;
-  display: flex;
-  background-color: #fafafa;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  top: 100px;
-}
-
-.slider {
-  width: 100%;
-  height: 500px;
-  border-radius: 0px;
+#slider {
   overflow: hidden;
 }
 
-.slides {
+#slider {
+  position: relative;
   width: 500%;
-  height: 500px;
-  display: flex;
+  margin: 0;
+  left: 0;
+  padding: 0;
+  animation: 20s slider infinite;
+  position: relative;
+  top: 20px;
 }
 
-.slides input {
-  display: none;
-}
-
-.slide {
+#slider figure img {
+  float: left;
   width: 20%;
-  transition: 2s;
 }
 
-.slide img {
-  width: 100%;
-  height: 400px;
-}
-
-/*CSS for manual slide*/
-.navigation-manual {
-  position: absolute;
-  width: 800px;
-  margin-top: -40px;
-  display: flex;
-  justify-content: center;
-  top: 60vh;
-  left: 45vh;
-}
-
-.manual-btn {
-  border: 2px solid #eb648c;
-  padding: 5px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 1s;
-}
-
-.manual-btn:not(:last-child) {
-  margin-right: 40px;
-}
-
-.manual-btn:hover {
-  background: #ce587b;
-}
-
-#radio1:checked ~ .first {
-  margin-left: 0;
-}
-
-#radio2:checked ~ .first {
-  margin-left: -20%;
-}
-
-#radio3:checked ~ .first {
-  margin-left: -40%;
-}
-
-#radio4:checked ~ .first {
-  margin-left: -60%;
-}
-
-/*css for auto nav*/
-.navigation-auto {
-  position: absolute;
-  width: 800px;
-  justify-content: center;
-  bottom: 13.9vh;
-  left: 45vh;
-  margin-top: 460px;
-  display: flex;
-}
-
-.navigation-auto div {
-  border: 2px solid #eb648c;
-  border-radius: 10px;
-  padding: 5px;
-  transition: 1s;
-}
-
-.navigation-auto div:not(:last-child) {
-  margin-right: 40px;
-}
-
-#radio1:checked ~ .navigation-auto .auto-btn1 {
-  background: #ce587b;
-}
-
-#radio2:checked ~ .navigation-auto .auto-btn2 {
-  background: #ce587b;
-}
-
-#radio3:checked ~ .navigation-auto .auto-btn3 {
-  background: #ce587b;
-}
-
-#radio4:checked ~ .navigation-auto .auto-btn4 {
-  background: #ce587b;
+@keyframes slider {
+  0% {
+    left: 0;
+  }
+  20% {
+    left: 0;
+  }
+  25% {
+    left: -100%;
+  }
+  45% {
+    left: -100%;
+  }
+  50% {
+    left: -200%;
+  }
+  70% {
+    left: -200%;
+  }
+  75% {
+    left: -300%;
+  }
+  95% {
+    left: -300%;
+  }
+  100% {
+    left: -400%;
+  }
 }
