--- a/app.css
+++ b/app.css
@@ -226,6 +226,7 @@ nav {
   margin: 5px;
   color: #fafafa;
   position: relative;
+  bottom: 8vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -477,4 +478,29 @@ footer {
   width: 100%;
   position: relative;
   top: 0px;
+}
+
+.maindiv {
+  width: 100%;
+  height: 270px;
+  position: relative;
+  left: 50%;
+  bottom: -23vh;
+  transform: translate(-50%, -50%);
+  background-image: url(images/bg-37.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  animation: slider 30s infinite linear;
+}
+
+@keyframes slider {
+  0% {
+    background-image: url(images/bg-37.jpg);
+  }
+  35% {
+    background-image: url(images/bg-38.jpg);
+  }
+  75% {
+    background-image: url(images/bg-56.jpg);
+  }
 }
