--- a/app.css
+++ b/app.css
@@ -485,22 +485,25 @@ footer {
   height: 270px;
   position: relative;
   left: 50%;
-  bottom: -23vh;
+  bottom: -22.8vh;
   transform: translate(-50%, -50%);
-  background-image: url(images/bg-37.jpg);
+  background-image: url(images/cma-cgm-vessel.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  animation: slider 30s infinite linear;
+  animation: slider 25s infinite linear;
 }
 
 @keyframes slider {
   0% {
-    background-image: url(images/bg-37.jpg);
+    background-image: url(images/cma-cgm-vessel.jpg);
   }
   35% {
-    background-image: url(images/bg-38.jpg);
+    background-image: url(images/container-ship-sea-generic-2.jpg);
   }
   75% {
-    background-image: url(images/bg-56.jpg);
+    background-image: url(images/smallship.jpg);
+  }
+  95% {
+    background-image: url(images/unnamed.jpg);
   }
 }
