--- a/app.css
+++ b/app.css
@@ -485,25 +485,25 @@ footer {
   height: 270px;
   position: relative;
   left: 50%;
-  bottom: -22.8vh;
+  bottom: -22.7vh;
   transform: translate(-50%, -50%);
-  background-image: url(images/cma-cgm-vessel.jpg);
+  background-image: url(images/smallship.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  animation: slider 25s infinite linear;
+  animation: slider 20s infinite linear;
 }
 
 @keyframes slider {
   0% {
-    background-image: url(images/cma-cgm-vessel.jpg);
-  }
-  35% {
-    background-image: url(images/container-ship-sea-generic-2.jpg);
-  }
-  75% {
     background-image: url(images/smallship.jpg);
   }
-  95% {
+  35% {
+    background-image: url(images/cma-cgm-vessel.jpg);
+  }
+  75% {
     background-image: url(images/unnamed.jpg);
+  }
+  95% {
+    background-image: url(images/container-ship-sea-generic-2.jpg);
   }
 }
